--- a/Car-Price-Prediction-cardekho/templates/gui.html
+++ b/Car-Price-Prediction-cardekho/templates/gui.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Car-Price-Prediction-cardekho</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
 
 <div class="container">
  <form action="{{ url_for('predict')}}" method="post">
-  <h3 class="text-center">Predictive analysis</h3>
+  <h3 class="text-center">Car Price Predictive analysis on Cardekho</h3>
     <div class="form-group">
       <label for="first1" class="font-weight-bold">Year:</label>
       <input id="first1" name="Year" type="number " class="form-control"><br>
