--- a/Car-Price-Prediction-cardekho/templates/gui.html
+++ b/Car-Price-Prediction-cardekho/templates/gui.html
@@ -16,7 +16,7 @@
   <h3 class="text-center">Predictive analysis</h3>
     <div class="form-group">
       <label for="first1" class="font-weight-bold">Year:</label>
-      <input id="first1" name="Year" type="number" required="required" class="form-control"><br>
+      <input id="first1" name="Year" max="2020" type="number" required="required" class="form-control"><br>
 
         <label for="first2" class="font-weight-bold">What is the Showroom Price?(In lakhs):</label>
       <input id="first2" name="Present_Price"  type="number" required="required" class="form-control"><br>
